--- a/resources/js/lang/am.json
+++ b/resources/js/lang/am.json
@@ -1,4 +1,7 @@
 {
     "welcome": "Բարի գալուստ",
-    "logout": "Ելք"
+    "logout": "Ելք",
+    "select_category": "Ընտրել կատեգորիա",
+    "select_sub_category": "Ընտրել ենթակատեգորիա",
+    "create_task": "Ստեղծել առաջադրանք"
   }
