--- a/resources/js/lang/am.json
+++ b/resources/js/lang/am.json
@@ -1,4 +1,8 @@
 {
     "welcome": "Բարի գալուստ",
-    "logout": "Ելք"
-  }
+    "logout": "Ելք",
+
+    "form": {
+        "title": "hayeren"
+    }
+}
