--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -1,4 +1,9 @@
 {
     "welcome": "Welcome",
-    "logout": "Logout"
-  }
+    "logout": "Logout",
+
+    "form": {
+        "title": "english"
+        
+    }
+}
