--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -1,4 +1,8 @@
 {
     "welcome": "Добро пожаловать",
-    "logout": "Выйти"
-  }
+    "logout": "Выйти",
+
+    "form": {
+        "title": "ruseren"
+    }
+}
