--- a/resources/lang/am/task.create.json
+++ b/resources/lang/am/task.create.json
@@ -2,7 +2,7 @@
     "create_task": "Ստեղծել առաջադրանք",
     "select_category": "Ընտրել կատեգորիա",
     "select_sub_category": "Ընտրել ենթակատեգորիա",
-    "select_location": "Ընտրել տեղանքը",
+    "select_location": "Ընտրել տեղանք",
     "enter_task_name": "Մուտքագրեք առաջադրանքի անվանումը",
     "task_name": "Առաջադրանքի անվանումը",
     "min_price": "Նվազագույն գին",
