--- a/resources/lang/am/register.json
+++ b/resources/lang/am/register.json
@@ -1,3 +1,8 @@
 {
-    "title" : "am register"
+    "title_h5": "Եկեք սկսենք",
+    "title_p": "Գրանցվեք և ստացեք Gorc-Ka-ի բոլոր հնարավորությունները",
+    "agree": "համաձայնել",
+    "terms_conditions": "Պայմաններ և դրույթներ",
+    "register": "Գրանցվել"
+
 }
