--- a/resources/lang/en/register.json
+++ b/resources/lang/en/register.json
@@ -1,3 +1,7 @@
 {
-    "title" : "en register"
+    "title_h5": "Let's Get Started",
+    "title_p": "Sign Up and get access to all the features of Jobcy",
+    "agree": "agree to the",
+    "terms_conditions": "Terms and conditions",
+    "register": "Register"
 }
