--- a/resources/lang/ru/register.json
+++ b/resources/lang/ru/register.json
@@ -1,3 +1,7 @@
 {
-    "title" : "ru register"
+    "title_h5": "Давайте начнем",
+    "title_p": "Зарегистрируйтесь и получите доступ ко всем возможностям Gorc-Ka",
+    "agree": "соглашаться с",
+    "terms_conditions": "Положения и условия",
+    "register": "Регистрация"
 }
