--- a/resources/lang/am/login.json
+++ b/resources/lang/am/login.json
@@ -1,3 +1,7 @@
 {
-    "title" : "am login"
+    "title_h5": "Բարի վերադարձ",
+    "title_p": "Մուտք գործեք՝ շարունակելու Gorc-Ka-ի ուսումնասիրությունը։",
+    "sign_in": "Մուտք",
+    "forgot_password": "Մոռացել եք գաղտնաբառը",
+    "not_registered": "Դեռ գրանցված չե՞ք:"
 }
