--- a/resources/lang/en/form.json
+++ b/resources/lang/en/form.json
@@ -12,7 +12,8 @@
     "email_placeholder": "Enter your email",
     "phone_placeholder": "Enter your phone number",
     "password_placeholder": "Enter your password",
-    "password_confirmation_placeholder": "Confirm Password"
+    "password_confirmation_placeholder": "Confirm Password",
+    "select_placeholder": "Select an option"
 
 
 
