--- a/resources/lang/ru/login.json
+++ b/resources/lang/ru/login.json
@@ -1,3 +1,7 @@
 {
-    "title": "ru login"
+    "title_h5": "С возвращением !",
+    "title_p": "Войдите, чтобы продолжить знакомство с Gorc-Ka.",
+    "sign_in": "Войти",
+    "forgot_password": "Забыли пароль?",
+    "not_registered": "Еще не зарегистрированы? "
 }
