--- a/resources/lang/en/login.json
+++ b/resources/lang/en/login.json
@@ -1,3 +1,7 @@
 {
-    "title" : "en login"
+    "title_h5": "Welcome Back !",
+    "title_p": "Sign in to continue to Jobcy.",
+    "sign_in": "Sign In",
+    "forgot_password": "Forgot your password?",
+    "not_registered": "Not registered yet? "
 }
