--- a/resources/lang/am/login.json
+++ b/resources/lang/am/login.json
@@ -1,4 +1,5 @@
 {
+    "title": "Մուտք",
     "title_h5": "Բարի վերադարձ",
     "title_p": "Մուտք գործեք՝ շարունակելու Gorc-Ka-ի ուսումնասիրությունը։",
     "sign_in": "Մուտք",
