--- a/resources/lang/am/register.json
+++ b/resources/lang/am/register.json
@@ -1,4 +1,5 @@
 {
+    "title": "Գրանցվել",
     "title_h5": "Եկեք սկսենք",
     "title_p": "Գրանցվեք և ստացեք Gorc-Ka-ի բոլոր հնարավորությունները",
     "agree": "համաձայնել",
