--- a/resources/lang/ru/login.json
+++ b/resources/lang/ru/login.json
@@ -1,4 +1,5 @@
 {
+    "title": "Войти",
     "title_h5": "С возвращением !",
     "title_p": "Войдите, чтобы продолжить знакомство с Gorc-Ka.",
     "sign_in": "Войти",
