--- a/resources/lang/ru/register.json
+++ b/resources/lang/ru/register.json
@@ -1,4 +1,5 @@
 {
+    "title": "Регистрация",
     "title_h5": "Давайте начнем",
     "title_p": "Зарегистрируйтесь и получите доступ ко всем возможностям Gorc-Ka",
     "agree": "соглашаться с",
