--- a/resources/lang/en/login.json
+++ b/resources/lang/en/login.json
@@ -1,4 +1,5 @@
 {
+    "title": "Sign In",
     "title_h5": "Welcome Back !",
     "title_p": "Sign in to continue to Jobcy.",
     "sign_in": "Sign In",
