--- a/resources/lang/en/register.json
+++ b/resources/lang/en/register.json
@@ -1,4 +1,5 @@
 {
+    "title": "Register",
     "title_h5": "Let's Get Started",
     "title_p": "Sign Up and get access to all the features of Jobcy",
     "agree": "agree to the",
