add avatar code

--- a/resources/lang/en/task.create.json
+++ b/resources/lang/en/task.create.json
@@ -2,11 +2,11 @@
    "select_category": "Select category",
     "select_sub_category": "Select subcategory",
     "create_task": "Create a task",
-    "select_location": "Select location",
+    "select_location": "Select region",
     "enter_task_name": "Enter a task name",
     "task_name": "Task name",
-    "min_price": "Min price",
-    "max_price": "Maximum price",
+    "price_min": "Min price",
+    "price_max": "Maximum price",
     "start_date": "Start date",
     "end_date": "End date",
     "description": "Description",
