--- a/resources/lang/ru/task.create.json
+++ b/resources/lang/ru/task.create.json
@@ -2,11 +2,11 @@
     "create_task": "Создать задачу",
     "select_category": "Выберите категорию",
     "select_sub_category": "Выберите подкатегорию",
-    "select_location": "Выберите местоположение",
+    "select_location": "Выберите регион",
     "enter_task_name": "Введите название задачи",
     "task_name": "Имя задачи",
-    "min_price": "Минимальная цена",
-    "max_price": "Максимальная цена",
+    "price_min": "Минимальная цена",
+    "price_max": "Максимальная цена",
     "start_date": "Дата начала",
     "end_date": "Дата окончания",
     "description": "Описание",
