--- a/resources/lang/am/task.create.json
+++ b/resources/lang/am/task.create.json
@@ -2,11 +2,11 @@
     "create_task": "Ստեղծել առաջադրանք",
     "select_category": "Ընտրել կատեգորիա",
     "select_sub_category": "Ընտրել ենթակատեգորիա",
-    "select_location": "Ընտրել տեղանք",
+    "select_location": "Ընտրել մարզ",
     "enter_task_name": "Մուտքագրեք առաջադրանքի անվանումը",
     "task_name": "Առաջադրանքի անվանումը",
-    "min_price": "Նվազագույն գին",
-    "max_price": "Առավելագույն գին",
+    "price_min": "Նվազագույն գին",
+    "price_max": "Առավելագույն գին",
     "start_date": "Մեկնարկի ամսաթիվը",
     "end_date": "Ավարտի ամսաթիվը",
     "description": "Նկարագություն",
