--- a/resources/lang/am/form.json
+++ b/resources/lang/am/form.json
@@ -15,6 +15,12 @@
     "phone_placeholder": "Մուտքագրեք ձեր հեռախոսահամարը",
     "password_placeholder": "Մուտքագրեք ձեր գաղտնաբառը",
     "password_confirmation_placeholder": "Հաստատեք գաղտնաբառը",
-    "select_placeholder": "Ընտրեք տարբերակը"
+    "select_placeholder": "Ընտրեք տարբերակը",
+
+    "name_surname": "Անուն Ազգանուն",
+    "filter": "Ֆիլտր",
+    "cleare_filter": "Չեղարկել"
+
+
 
 }
