--- a/resources/lang/en/form.json
+++ b/resources/lang/en/form.json
@@ -15,7 +15,11 @@
     "phone_placeholder": "Enter your phone number",
     "password_placeholder": "Enter your password",
     "password_confirmation_placeholder": "Confirm Password",
-    "select_placeholder": "Select an option"
+    "select_placeholder": "Select an option",
+
+    "name_surname": "Name surname",
+    "filter": "Filter",
+    "cleare_filter": "Cleare"
 
 
 
