--- a/resources/lang/am/specialists.json
+++ b/resources/lang/am/specialists.json
@@ -1,5 +1,7 @@
 {
     "title": "Մասնագետներ",
-    "nav_home": "Գլխավոր"
-
+    "nav_home": "Գլխավոր",
+    "showing": "Ցուցադրված է",
+    "of": "-ը",
+    "results": "արդյունքներից"
 }
