--- a/resources/lang/ru/specialists.json
+++ b/resources/lang/ru/specialists.json
@@ -1,5 +1,7 @@
 {
     "title": "Специалисты",
-    "nav_home": "Главный"
-
+    "nav_home": "Главный",
+    "showing": "Показано",
+    "of": "из",
+    "results": "результатов"
 }
