--- a/resources/lang/en/specialists.json
+++ b/resources/lang/en/specialists.json
@@ -1,6 +1,7 @@
 {
     "title": "Specialists",
-    "nav_home": "Home"
-
-
+    "nav_home": "Home",
+    "showing": "Showing",
+    "of": "of",
+    "results": "results"
 }
