--- a/resources/lang/am/task.create.json
+++ b/resources/lang/am/task.create.json
@@ -10,6 +10,8 @@
     "start_date": "Մեկնարկի ամսաթիվը",
     "end_date": "Ավարտի ամսաթիվը",
     "description": "Նկարագություն",
-    "chose_file": "Ընտրեք ֆայլը"
+    "chose_file": "Ընտրեք ֆայլը",
+    "task_type": "Առաջադրանքի տեսակը",
+    "remote_task": "Հեռավար աշխատանքի համար նշել"
 
 }
