--- a/resources/lang/am/task.edit.json
+++ b/resources/lang/am/task.edit.json
@@ -11,6 +11,8 @@
     "end_date": "Ավարտի ամսաթիվը",
     "description": "Նկարագություն",
     "chose_file": "Ընտրեք ֆայլը",
-    "select_placeholder":"Կատարել գործողություն"
+    "select_placeholder":"Կատարել գործողություն",
+    "task_type": "Առաջադրանքի տեսակը",
+    "remote_task": "Հեռավար աշխատանքի համար նշել"
 
 }
