--- a/resources/lang/en/task.create.json
+++ b/resources/lang/en/task.create.json
@@ -10,6 +10,8 @@
     "start_date": "Start date",
     "end_date": "End date",
     "description": "Description",
-    "chose_file": "Chose file"
+    "chose_file": "Chose file",
+    "task_type": "Task type",
+    "remote_task": "Mark for remote work"
 
 }
