--- a/resources/lang/ru/task.create.json
+++ b/resources/lang/ru/task.create.json
@@ -10,6 +10,9 @@
     "start_date": "Дата начала",
     "end_date": "Дата окончания",
     "description": "Описание",
-    "chose_file": "Выбрать файл"
+    "chose_file": "Выбрать файл",
+    "task_type": "Тип задачи",
+    "remote_task": "Отметить для удаленной работы"
+
 
 }
