--- a/resources/lang/en/form.json
+++ b/resources/lang/en/form.json
@@ -15,7 +15,8 @@
     "phone_placeholder": "Enter your phone number",
     "password_placeholder": "Enter your password",
     "password_confirmation_placeholder": "Confirm Password",
-    "select_placeholder": "Select an option"
+    "select_placeholder": "Select an option",
+    "save": "Save"
 
 
 
