--- a/resources/lang/ru/task.edit.json
+++ b/resources/lang/ru/task.edit.json
@@ -11,6 +11,8 @@
     "end_date": "Дата окончания",
     "description": "Описание",
     "chose_file": "Выбрать файл",
-    "select_placeholder":"Выбрать"
+    "select_placeholder":"Выбрать",
+    "task_type": "Тип задачи",
+    "remote_task": "Отметить для удаленной работы"
 
 }
