--- a/resources/lang/am/welcome.json
+++ b/resources/lang/am/welcome.json
@@ -1,4 +1,9 @@
 {
-    "title": "Գլխավոր"
+    "title": "Գլխավոր",
+    "categories": {
+        "h3": "Բրաուզերի աշխատատեղերի կատեգորիաներ",
+        "p": "Բրաուզերի աշխատատեղերի կատեգորիաներ Բրաուզերի աշխատատեղերի կատեգորիաներ",
+        "link": "Դիտեք բոլոր կատեգորիաները"
+    }
 
 }
