--- a/resources/lang/en/welcome.json
+++ b/resources/lang/en/welcome.json
@@ -1,4 +1,9 @@
 {
-    "title": "Home"
+    "title": "Home",
+    "categories": {
+        "h3": "Browser Jobs Categories",
+        "p": "Post a job to tell us about your project. We'll quickly match you with the right freelancers.",
+        "link": "Browse All Categories"
+    }
 
 }
