--- a/resources/lang/ru/welcome.json
+++ b/resources/lang/ru/welcome.json
@@ -1,4 +1,9 @@
 {
-    "title": "Главная"
+    "title": "Главная",
+    "categories": {
+        "h3": "Категории рабочих мест в браузере",
+        "p": "Опубликуйте вакансию, чтобы рассказать нам о своем проекте. Мы быстро подберем для вас подходящими фрилансерами.",
+        "link": "Просмотреть все категории"
+    }
 
 }
