--- a/resources/lang/am/welcome.json
+++ b/resources/lang/am/welcome.json
@@ -4,6 +4,17 @@
         "h3": "Բրաուզերի աշխատատեղերի կատեգորիաներ",
         "p": "Բրաուզերի աշխատատեղերի կատեգորիաներ Բրաուզերի աշխատատեղերի կատեգորիաներ",
         "link": "Դիտեք բոլոր կատեգորիաները"
+    },
+
+    "jobs": {
+        "h3": "Նոր և պատահական աշխատանքներ",
+        "p": "Տեղադրեք աշխատանք՝ մեզ ձեր նախագծի մասին պատմելու համար:",
+        "all": "Բոլորը",
+        "remote": "Հեռավար",
+        "execution_time": "Կատարման ժամանակը: ",
+        "apply_now": "Դիմեք հիմա",
+        "no_result": "Արդյունք չի գտնվել",
+        "view_more": "Դիտել Ավելին"
     }
 
 }
