--- a/resources/lang/ru/welcome.json
+++ b/resources/lang/ru/welcome.json
@@ -4,6 +4,17 @@
         "h3": "Категории рабочих мест в браузере",
         "p": "Опубликуйте вакансию, чтобы рассказать нам о своем проекте. Мы быстро подберем для вас подходящими фрилансерами.",
         "link": "Просмотреть все категории"
+    },
+
+    "jobs": {
+        "h3": "Новые и случайные вакансии",
+        "p": "Опубликуйте вакансию, чтобы рассказать нам о своем проекте. Мы быстро подберем для вас подходящих <br>  фрилансеров.",
+        "all": "Все",
+        "remote": "Удаленный",
+        "execution_time": "Время выполнения: ",
+        "apply_now": "Подать заявку сейчас",
+        "no_result": "Нет результата",
+        "view_more": "Посмотреть больше"
     }
 
 }
