--- a/resources/lang/am/categories.json
+++ b/resources/lang/am/categories.json
@@ -1,7 +1,7 @@
 {
     "title": "Կատեգորիաներ",
-    "h4": "Բրաուզերի աշխատատեղերի կատեգորիաներ",
-    "p": "Բրաուզերի աշխատատեղերի կատեգորիաներ Բրաուզերի աշխատատեղերի կատեգորիաներ",
+    "h4": "Աշխատանքների և առաջադրանքների կատեգորիաներ",
+    "p": "Փնտրեք ձեր աշխատանքը ըստ համապատասխան կատեգորիաների",
     "link": "Դիտեք բոլոր կատեգորիաները"
 
 
