--- a/resources/lang/am/jobs.json
+++ b/resources/lang/am/jobs.json
@@ -1,9 +1,9 @@
 {
     "title": "Աշխատանքներ",
     "categories": "Կատեգորիաներ",
-    "job_type": "Աշխատանքի տեսկը",
+    "job_type": "Աշխատանքի տեսակը",
     "remote": "Հեռավար",
-
+    "form_name": "Անվանում, նկարագիր",
     "jobs": {
         "remote": "Հեռավար",
         "execution_time": "Կատարման ժամանակը: ",
