--- a/resources/lang/am/single_job.json
+++ b/resources/lang/am/single_job.json
@@ -1,7 +1,7 @@
 {
     "title": "Աշխատանք",
     "jobs_title": "Աշխատանքներ",
-    "job_type": "Աշխատանքի տեսկը",
+    "job_type": "Աշխատանքի տեսակը",
     "remote": "Հեռավար",
     "job_overview": "Աշխատանքի մանրամասներ",
     "view_profile": "Դիտել Պրոֆիլը",
