--- a/resources/lang/am/welcome.json
+++ b/resources/lang/am/welcome.json
@@ -1,14 +1,23 @@
 {
     "title": "Գլխավոր",
+    "find_job": {
+        "h1": "Գտեք ձեր աշխատանքը մեր օգնությամբ: ",
+        "h1_1": "Գտեք ձեր աշխատանքը",
+        "h1_2": "մեր",
+        "h1_3": "օգնությամ",
+        "p": "Որոնեք ձեզ հարմար աշխատանք կամ տեղադրեք ձեզ անհրաժեշտ աշխատանքների և հաստիքների համար տեղեկատվություն աշխատակից գտնելու համար:",
+        "name": "Անվանում",
+        "find_job": "Որոնել աշխատանք"
+    },
     "categories": {
-        "h3": "Բրաուզերի աշխատատեղերի կատեգորիաներ",
-        "p": "Բրաուզերի աշխատատեղերի կատեգորիաներ Բրաուզերի աշխատատեղերի կատեգորիաներ",
+        "h3": "Աշխատանքների և առաջադրանքների կատեգորիաներ",
+        "p": "Փնտրեք ձեր աշխատանքը ըստ համապատասխան կատեգորիաների",
         "link": "Դիտեք բոլոր կատեգորիաները"
     },
 
     "jobs": {
-        "h3": "Նոր և պատահական աշխատանքներ",
-        "p": "Տեղադրեք աշխատանք՝ մեզ ձեր նախագծի մասին պատմելու համար:",
+        "h3": "Նոր տեղադրված աշխատանքներ",
+        "p": "Դիտեք բոլոր կատեգորիաների ամենաթարմ աշխատանքները:",
         "all": "Բոլորը",
         "remote": "Հեռավար",
         "execution_time": "Կատարման ժամանակը: ",
