--- a/resources/lang/en/categories.json
+++ b/resources/lang/en/categories.json
@@ -1,6 +1,6 @@
 {
     "title": "Categories",
-    "h4": "Browser Jobs Categories",
-    "p": "Post a job to tell us about your project. We'll quickly match you with the right freelancers.",
+    "h4": "Job and Task Categories",
+    "p": "Search for your job by relevant categories.",
     "link": "Browse All Categories"
 }
