--- a/resources/lang/ru/categories.json
+++ b/resources/lang/ru/categories.json
@@ -1,7 +1,7 @@
 {
     "title": "Категории",
-    "h4": "Категории рабочих мест в браузере",
-    "p": "Опубликуйте вакансию, чтобы рассказать нам о своем проекте. Мы быстро подберем для вас подходящими фрилансерами.",
+    "h4": "Категории работ и задач",
+    "p": "Найдите свою работу по соответствующим категориям.",
     "link": "Просмотреть все категории"
 
 
