--- a/resources/lang/ru/jobs.json
+++ b/resources/lang/ru/jobs.json
@@ -3,7 +3,7 @@
     "categories": "Категории",
     "job_type": "Тип работы",
     "remote": "Удаленный",
-
+    "form_name": "Название, описание",
     "jobs": {
         "remote": "Удаленный",
         "execution_time": "Время выполнения: ",
