--- a/resources/lang/ru/register.json
+++ b/resources/lang/ru/register.json
@@ -2,7 +2,7 @@
     "title": "Регистрация",
     "title_h5": "Давайте начнем",
     "title_p": "Зарегистрируйтесь и получите доступ ко всем возможностям Gorc-Ka",
-    "agree": "соглашаться с",
-    "terms_conditions": "Положения и условия",
+    "agree": "Примите",
+    "terms_conditions": "Условия и положения",
     "register": "Регистрация"
 }
