--- a/resources/lang/ru/welcome.json
+++ b/resources/lang/ru/welcome.json
@@ -1,14 +1,23 @@
 {
     "title": "Главная",
+    "find_job": {
+        "h1": "Найдите свою работу с нашей помощью. ",
+        "h1_1": "Найдите работу с",
+        "h1_2": "нашей",
+        "h1_3": "помощью",
+        "p": "Найдите подходящую вам работу или разместите информацию о вакансиях и должностях, которые вам нужны, чтобы найти сотрудника.",
+        "name": "Название",
+        "find_job": "Найти работу"
+    },
     "categories": {
-        "h3": "Категории рабочих мест в браузере",
-        "p": "Опубликуйте вакансию, чтобы рассказать нам о своем проекте. Мы быстро подберем для вас подходящими фрилансерами.",
+        "h3": "Категории работ и задач",
+        "p": "Найдите свою работу по соответствующим категориям.",
         "link": "Просмотреть все категории"
     },
 
     "jobs": {
-        "h3": "Новые и случайные вакансии",
-        "p": "Опубликуйте вакансию, чтобы рассказать нам о своем проекте. Мы быстро подберем для вас подходящих <br>  фрилансеров.",
+        "h3": "Недавно добавленные вакансии",
+        "p": "Посмотреть последние вакансии во всех категориях.",
         "all": "Все",
         "remote": "Удаленный",
         "execution_time": "Время выполнения: ",
