--- a/resources/lang/am/register.json
+++ b/resources/lang/am/register.json
@@ -2,8 +2,8 @@
     "title": "Գրանցվել",
     "title_h5": "Եկեք սկսենք",
     "title_p": "Գրանցվեք և ստացեք Gorc-Ka-ի բոլոր հնարավորությունները",
-    "agree": "համաձայնել",
-    "terms_conditions": "Պայմաններ և դրույթներ",
+    "agree": "Ընդունեք",
+    "terms_conditions": "Պայմանները և դրույթները",
     "register": "Գրանցվել"
 
 }
