--- a/resources/lang/en/register.json
+++ b/resources/lang/en/register.json
@@ -2,7 +2,7 @@
     "title": "Register",
     "title_h5": "Let's Get Started",
     "title_p": "Sign Up and get access to all the features of Jobcy",
-    "agree": "agree to the",
-    "terms_conditions": "Terms and conditions",
+    "agree": "Accept the",
+    "terms_conditions": "Terms and Conditions",
     "register": "Register"
 }
