nav bar changes

--- a/resources/lang/am/navbar.json
+++ b/resources/lang/am/navbar.json
@@ -3,5 +3,6 @@
     "jobs": "Աշխատանքներ",
     "specialists": "Մասնագետներ",
     "categories": "Կատեգորիաներ",
-    "contact": "Կապ մեզ հետ"
+    "contact": "Կապ մեզ հետ",
+    "post_job": "Ավելացնել աշխատանք"
 }
