--- a/resources/lang/en/navbar.json
+++ b/resources/lang/en/navbar.json
@@ -3,6 +3,7 @@
     "jobs": "Jobs",
     "specialists": "Specialists",
     "categories": "Categories",
-    "contact": "Contact"
+    "contact": "Contact",
+    "post_job": "Post Job"
 
 }
