--- a/resources/lang/ru/navbar.json
+++ b/resources/lang/ru/navbar.json
@@ -3,5 +3,6 @@
     "jobs": "Вакансии",
     "specialists": "Специалисты",
     "categories": "Категории",
-    "contact": "Контакты"
+    "contact": "Контакты",
+    "post_job": "Добавить работу"
 }
