--- a/resources/lang/am/navbar.json
+++ b/resources/lang/am/navbar.json
@@ -4,5 +4,6 @@
     "specialists": "Մասնագետներ",
     "categories": "Կատեգորիաներ",
     "contact": "Կապ մեզ հետ",
-    "post_job": "Ավելացնել աշխատանք"
+    "post_job": "Ավելացնել աշխատանք",
+    "footer": "Հեղինակային իրավունքները պաշտպանված են: Կայքը ստեղծել է "
 }
