--- a/resources/lang/en/navbar.json
+++ b/resources/lang/en/navbar.json
@@ -4,6 +4,7 @@
     "specialists": "Specialists",
     "categories": "Categories",
     "contact": "Contact",
-    "post_job": "Post Job"
+    "post_job": "Post Job",
+    "footer": "Copyright reserved. Site created by "
 
 }
