--- a/resources/lang/ru/navbar.json
+++ b/resources/lang/ru/navbar.json
@@ -4,5 +4,6 @@
     "specialists": "Специалисты",
     "categories": "Категории",
     "contact": "Контакты",
-    "post_job": "Добавить работу"
+    "post_job": "Добавить работу",
+    "footer": "Авторские права защищены. Сайт создан "
 }
