--- a/resources/lang/am/welcome.json
+++ b/resources/lang/am/welcome.json
@@ -4,7 +4,7 @@
         "h1": "Գտեք ձեր աշխատանքը մեր օգնությամբ: ",
         "h1_1": "Գտեք ձեր աշխատանքը",
         "h1_2": "մեր",
-        "h1_3": "օգնությամ",
+        "h1_3": "օգնությամբ",
         "p": "Որոնեք ձեզ հարմար աշխատանք կամ տեղադրեք ձեզ անհրաժեշտ աշխատանքների և հաստիքների համար տեղեկատվություն աշխատակից գտնելու համար:",
         "name": "Անվանում",
         "find_job": "Որոնել աշխատանք"
@@ -24,6 +24,17 @@
         "apply_now": "Դիմեք հիմա",
         "no_result": "Արդյունք չի գտնվել",
         "view_more": "Դիտել Ավելին"
+    },
+
+    "site_guide": {
+        "h3": "Կայքի ուղեցույց",
+        "h5_1": "Գրանցվեք կայքում",
+        "p_1": "Գրանցվելու համար լրացրեք համապատասխան դաշտերը և մուտք գործեք համակարգ, կայքի բոլոր հնարավորություններից օգտվելու համար:",
+        "h5_2": "Տեղադրեք աշխատանք կամ առաջադրանք",
+        "p_2": "Որպես գործատու ստեղծեք կայքում աշխատանքի կամ առաջադրանքի վերաբերյալ էջ, հետաքրքրված անձանց գտնելու համար:",
+        "h5_3": "Փնտրեք ձեզ հետաքրքիր աշխատանք կամ առաջադրանք",
+        "p_3": "Փնտրեք աշխատանք կամ առաջադրանք ըստ կատեգորիաների և ենթակատեգորիաների, ձեր ուզած աշխատանքը գտնելու համար:"
+
     }
 
 }
