--- a/resources/lang/am/jobs.json
+++ b/resources/lang/am/jobs.json
@@ -8,6 +8,7 @@
         "remote": "Հեռավար",
         "execution_time": "Կատարման ժամանակը: ",
         "apply_now": "Դիմեք հիմա",
-        "no_result": "Արդյունք չի գտնվել"
+        "no_result": "Արդյունք չի գտնվել",
+        "you_applied": "Դուք դիմել եք"
     }
 }
