--- a/resources/lang/am/single_job.json
+++ b/resources/lang/am/single_job.json
@@ -17,6 +17,7 @@
         "no_result": "Արդյունք չի գտնվել",
         "location": "Գտնվելու վայրը",
         "offered_salary": "Առաջարկվող աշխատավարձ",
-        "date_posted": "Տեղադրման ամսաթիվը"
+        "date_posted": "Տեղադրման ամսաթիվը",
+        "you_applied": "Դուք դիմել եք "
     }
 }
