--- a/resources/lang/am/welcome.json
+++ b/resources/lang/am/welcome.json
@@ -23,7 +23,8 @@
         "execution_time": "Կատարման ժամանակը: ",
         "apply_now": "Դիմեք հիմա",
         "no_result": "Արդյունք չի գտնվել",
-        "view_more": "Դիտել Ավելին"
+        "view_more": "Դիտել Ավելին",
+        "you_applied": "Դուք դիմել եք "
     },
 
     "site_guide": {
