--- a/resources/lang/en/single_job.json
+++ b/resources/lang/en/single_job.json
@@ -17,6 +17,7 @@
         "no_result": "No result",
         "location": "Location",
         "offered_salary": "Offered salary",
-        "date_posted": "Date posted"
+        "date_posted": "Date posted",
+        "you_applied": "You applied"
     }
 }
