--- a/resources/lang/en/welcome.json
+++ b/resources/lang/en/welcome.json
@@ -24,7 +24,8 @@
         "execution_time": "Execution time: ",
         "apply_now": "Apply Now",
         "no_result": "No result",
-        "view_more": "View More"
+        "view_more": "View More",
+        "you_applied": "You applied"
     },
 
     "site_guide": {
