--- a/resources/lang/ru/single_job.json
+++ b/resources/lang/ru/single_job.json
@@ -17,6 +17,7 @@
         "no_result": "Нет результата",
         "location": "Расположение",
         "offered_salary": "Предлагаемая зарплата",
-        "date_posted": "Дата публикации"
+        "date_posted": "Дата публикации",
+        "you_applied": "Вы откликнулись"
     }
 }
