--- a/resources/lang/ru/welcome.json
+++ b/resources/lang/ru/welcome.json
@@ -23,7 +23,8 @@
         "execution_time": "Время выполнения: ",
         "apply_now": "Подать заявку сейчас",
         "no_result": "Нет результата",
-        "view_more": "Посмотреть больше"
+        "view_more": "Посмотреть больше",
+        "you_applied": "Вы откликнулись"
     },
 
     "site_guide": {
