--- a/resources/lang/ru/jobs.json
+++ b/resources/lang/ru/jobs.json
@@ -8,6 +8,7 @@
         "remote": "Удаленный",
         "execution_time": "Время выполнения: ",
         "apply_now": "Подать заявку сейчас",
-        "no_result": "Нет результата"
+        "no_result": "Нет результата",
+        "you_applied": "Вы откликнулись"
     }
 }
