single job add images

--- a/resources/lang/am/single_job.json
+++ b/resources/lang/am/single_job.json
@@ -9,6 +9,7 @@
     "related_jobs": "Առնչվող աշխատանքներ",
     "view_more": "Դիտել Ավելին",
     "job_description": "Աշխատանքի նկարագրություն",
+    "images": "Նկարներ",
     "jobs": {
         "title": "Վերնագիր",
         "remote": "Հեռավար",
