--- a/resources/lang/en/single_job.json
+++ b/resources/lang/en/single_job.json
@@ -9,6 +9,7 @@
     "related_jobs": "Related Jobs",
     "view_more": "View More",
     "job_description": "Job Description",
+    "images": "Images",
     "jobs": {
         "title": "Title",
         "remote": "Remote",
