--- a/resources/lang/ru/single_job.json
+++ b/resources/lang/ru/single_job.json
@@ -9,6 +9,7 @@
     "related_jobs": "Похожие вакансии",
     "view_more": "Посмотреть больше",
     "job_description": "Описание работы",
+    "images": "Изображения",
     "jobs": {
         "title": "Заголовок",
         "remote": "Удаленный",
