--- a/resources/lang/ru/single_job.json
+++ b/resources/lang/ru/single_job.json
@@ -19,6 +19,8 @@
         "location": "Расположение",
         "offered_salary": "Предлагаемая зарплата",
         "date_posted": "Дата публикации",
-        "you_applied": "Вы откликнулись"
+        "you_applied": "Вы откликнулись",
+        "sign_in_to_apply": "Войдите, чтобы подать заявку",
+        "confirm_email_to_apply": "Подтвердите адрес электронной почты, чтобы подать заявку"
     }
 }
