--- a/resources/lang/en/single_job.json
+++ b/resources/lang/en/single_job.json
@@ -19,6 +19,8 @@
         "location": "Location",
         "offered_salary": "Offered salary",
         "date_posted": "Date posted",
-        "you_applied": "You applied"
+        "you_applied": "You applied",
+        "sign_in_to_apply": "Sign in to apply",
+        "confirm_email_to_apply": "Confirm email to apply"
     }
 }
