--- a/resources/lang/en/form.json
+++ b/resources/lang/en/form.json
@@ -7,6 +7,7 @@
     "location": "Region",
     "password": "Password",
     "password_confirmation": "Confirm Password",
+    "current_password": "Current password",
     "sign_in": "Sign In",
     "register": "Register",
 
@@ -15,6 +16,7 @@
     "phone_placeholder": "Enter your phone number",
     "password_placeholder": "Enter your password",
     "password_confirmation_placeholder": "Confirm Password",
+    "current_password_placeholder": "Enter the current password",
     "select_placeholder": "Select an option",
     "save": "Save",
     "name_surname": "Name surname",
