--- a/resources/lang/am/welcome.json
+++ b/resources/lang/am/welcome.json
@@ -36,6 +36,11 @@
         "h5_3": "Փնտրեք ձեզ հետաքրքիր աշխատանք կամ առաջադրանք",
         "p_3": "Փնտրեք աշխատանք կամ առաջադրանք ըստ կատեգորիաների և ենթակատեգորիաների, ձեր ուզած աշխատանքը գտնելու համար:"
 
+    },
+
+    "top_category_jobs": {
+        "h3": "Թոփ կատեգորիաների աշխատանքներ",
+        "p": "Առավել պահանջարկ ունեցող կատեգորիաների առաջադրանքներ"
     }
 
 }
