--- a/resources/lang/ru/welcome.json
+++ b/resources/lang/ru/welcome.json
@@ -35,6 +35,11 @@
         "p_2": "Как работодатель, создайте страницу вакансии или задания на сайте, чтобы найти заинтересованных людей.",
         "h5_3": "Найдите работу или задачу, которая вас интересует",
         "p_3": "Ищите работу или задачу по категориям и подкатегориям, чтобы найти нужную вам работу."
+    },
+
+    "top_category_jobs": {
+        "h3": "Вакансии в Топ категориях",
+        "p": "Задания в самых популярных категориях."
     }
 
 }
