--- a/resources/lang/am/task.list.json
+++ b/resources/lang/am/task.list.json
@@ -1,7 +1,11 @@
 {
     "task": " Առաջադրանքի",
     "start_date": "մեկնարկի ամսաթիվը",
-    "end_date": "ավարտի ամսաթիվը"
+    "end_date": "ավարտի ամսաթիվը",
+    "form_name": "Անվանում, նկարագիր",
+    "your_tasks_can_be_here":"Այստեղ կարող են լինել ձեր առաջադրանքները",
+    "task_list":"Առաջադրանքների ցանկ",
+    "no_results_found": "Արդյունք չի գտնվել"
 
 
 }
