--- a/resources/lang/en/task.edit.json
+++ b/resources/lang/en/task.edit.json
@@ -14,6 +14,10 @@
      "chose_file": "Chose file",
     "select_placeholder":"Do action",
     "task_type": "Task type",
-    "remote_task": "Mark for remote work"
+    "remote_task": "Mark for remote work",
+    "files_not_selected": "Files not selected",
+    "one_file_selected":"1 file selected",
+    "multiple_files_selected":"Selected :count files",
+    "task_edit":"Task edit"
 
  }
