--- a/resources/lang/ru/task.list.json
+++ b/resources/lang/ru/task.list.json
@@ -1,5 +1,9 @@
 {
     "task": " Задача",
     "start_date": "дата начала",
-    "end_date": "дата окончания"
+    "end_date": "дата окончания",
+    "form_name": "Название, описание",
+    "your_tasks_can_be_here":"Здесь могут быть ваши задачи",
+    "task_list":"Список задач",
+    "no_results_found":"Результаты не найдены"
 }
