--- a/resources/lang/am/task.create.json
+++ b/resources/lang/am/task.create.json
@@ -12,6 +12,10 @@
     "description": "Նկարագություն",
     "chose_file": "Ընտրեք ֆայլը",
     "task_type": "Առաջադրանքի տեսակը",
-    "remote_task": "Հեռավար աշխատանքի համար նշել"
+    "remote_task": "Հեռավար աշխատանքի համար նշել",
+    "files_not_selected": "Ֆայլեր չեն ընտրվել",
+    "one_file_selected":"Ընտրված է 1 ֆայլ",
+    "multiple_files_selected":"Ընտրված է :count ֆայլեր",
+    "task":"Առաջադրանք"
 
 }
