--- a/resources/lang/ru/task.edit.json
+++ b/resources/lang/ru/task.edit.json
@@ -13,6 +13,10 @@
     "chose_file": "Выбрать файл",
     "select_placeholder":"Выбрать",
     "task_type": "Тип задачи",
-    "remote_task": "Отметить для удаленной работы"
+    "remote_task": "Отметить для удаленной работы",
+    "files_not_selected": "Файлы не выбраны",
+    "one_file_selected":"Выбран 1 файл",
+    "multiple_files_selected":"Выбрано :count файлов",
+    "task_edit":"Редактировать задачу"
 
 }
