--- a/resources/lang/am/user.notifications.json
+++ b/resources/lang/am/user.notifications.json
@@ -2,7 +2,8 @@
     "title": "Ծանուցումներ",
     "delete_all": "Ջնջել բոլորը",
     "button_comment": "Գնահատել",
-
+    "task_name": "Առաջադրանք - ",
+    "no_result": "Արդյունք չի գտնվել",
     "comments": {
         "comment_label": "Գրել մեկնաբանություն",
         "comment_placeholder": "Մեկնաբանություն ․․․",
