--- a/resources/lang/en/user.notifications.json
+++ b/resources/lang/en/user.notifications.json
@@ -2,7 +2,8 @@
     "title": "Comments",
     "delete_all": "Delete All",
     "button_comment": "Rate",
-
+    "task_name": "Task: ",
+    "no_result": "No results found",
     "comments": {
         "comment_label": "Write a comment",
         "comment_placeholder": "Comment ․․․",
