--- a/resources/lang/ru/user.notifications.json
+++ b/resources/lang/ru/user.notifications.json
@@ -2,7 +2,8 @@
     "title": "Уведомления",
     "delete_all": "Удалить все",
     "button_comment": "Поставить оценку",
-
+    "task_name": "Задание: ",
+    "no_result": "Нет результата",
     "comments": {
         "comment_label": "Оставьте отзыв",
         "comment_placeholder": "Комментарий ․․․",
