correct filter add cursor, correct size

--- a/resources/lang/am/specialist_details.json
+++ b/resources/lang/am/specialist_details.json
@@ -4,6 +4,9 @@
     "email": "Էլ․հասցե",
     "address": "Հասցե",
     "phone": "Հեռախոսահամար",
-    "about_specialist":"Մասնագետի մասին"
+    "about_specialist":"Մասնագետի մասին",
+    "task_name": "Առաջադրանք - ",
+    "comments": "Մեկնաբանություններ",
+    "works": "Աշխատանքներ"
 
 }
