--- a/resources/lang/en/specialist_details.json
+++ b/resources/lang/en/specialist_details.json
@@ -4,6 +4,9 @@
     "email": "Email",
     "address": "Address",
     "phone": "Phone",
-    "about_specialist":"About specialist"
+    "about_specialist":"About specialist",
+    "task_name": "Task: ",
+    "comments": "Comments",
+    "works": "Works"
 
 }
